objects/bofc__BOFCOBDetails__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Created_By_ID__c</fullName>
        <label>Created By ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Created_Date__c</fullName>
        <label>Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Desc__c</fullName>
        <label>Desc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Display_Custom_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Custom Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Display_Standard_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Standard Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Last_Modified_By_ID__c</fullName>
        <label>Last Modified By ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__ObjectID__c</fullName>
        <label>ObjectID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Only_FLS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only FLS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__PermissionSetsIDs_for_FLS__c</fullName>
        <label>PermissionSetsIDs_for_FLS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__ProfileIDs_for_FLS__c</fullName>
        <label>ProfileIDs for FLS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Show_RT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show RT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Show_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show SF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Show_VR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show VR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__allowInChatterGroups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>allowInChatterGroups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__deploymentStatus__c</fullName>
        <label>deploymentStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__description__c</fullName>
        <label>description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bofc__enableActivities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>enableActivities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__enableBulkApi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>enableBulkApi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__enableFeeds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>enableFeeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__enableHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>enableHistory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__enableReports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>enableReports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__enableSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>enableSearch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__enableSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>enableSharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__enableStreamingApi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>enableStreamingApi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__label__c</fullName>
        <label>label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__pluralLabel__c</fullName>
        <label>pluralLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__recordTypeTrackHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>recordTypeTrackHistory</label>
        <type>Checkbox</type>
    </fields>
    <label>BOFCOBDetails</label>
    <nameField>
        <label>BOFCOBDetaiks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCOBDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>